<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/fondo_detalles"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NuevoProductoActivity">

    <TextView
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="20dp"
        android:text="@string/ing_lista"
        android:textAlignment="center"
        android:textColor="#E91E63"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ingresarNombre"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/nombre_producto"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/ingresarCantidad"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/cantidad_prod"
        android:inputType="number" />

    <Spinner
        android:id="@+id/ingresarUnidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/unidad"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/otraUnidad"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/otra_unidad"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/botonIngresarProducto"
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:text="@string/boton_ingresar_prod"
        app:backgroundTint="#2196F3" />





</LinearLayout>