<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/fondo_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/inicio"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textColor="#FDFA65"
        android:textSize="50sp"
        android:textStyle="bold"
        />


    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="50dp"
        android:src="@drawable/menu"
        />

    <Button
        android:id="@+id/ver_lista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="480dp"
        android:text="@string/ver_lista"
        app:backgroundTint="#2196F3"
        />

    <Button
        android:id="@+id/botonNuevo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="530dp"
        android:text="@string/ingresar_producto"
        android:layout_centerHorizontal="true"
        app:backgroundTint="#2196F3"
        />

    <Button
        android:id="@+id/botonEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="580dp"
        android:layout_centerHorizontal="true"
        android:text="@string/limpiar_lista"
        app:backgroundTint="#2196F3"
        />


</RelativeLayout>